--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,7 @@
     <string name="submit">Submit</string>
     <string name="routeInfo">Route Information</string>
     <string name="done">Done</string>
+
+
+    <string name="test">test</string>
 </resources>
