--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,14 @@
     <string name="routeInfo">Route Information</string>
     <string name="done">Done</string>
     <string name="back">Back</string>
+    <string name="importXML">Import</string>
+    <string name="Stats">Stats</string>
+    <string name="mc">Multiple Choice</string>
+    <string name="tf">True/False</string>
+    <string name="nu">Numeric</string>
+    <string name="enterQuestion">Enter question here</string>
+    <string name="enterAnswer">Enter answer here</string>
+    <string name="trueAnswer">True</string>
+    <string name="falseAnswer">False</string>
+
 </resources>
