--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -53,6 +53,10 @@
     <string name="text_medical_benefit">是否有医保:</string>
     <string name="text_glasses_date">眼镜购买日期:</string>
     <string name="text_glasses_store">眼镜购买商店:</string>
+    <string name="text_statistics">患者年龄统计</string>
+    <string name="text_minimum_age">最小年龄:&#160;&#160;</string>
+    <string name="text_maximum_age">最大年龄:&#160;&#160;</string>
+    <string name="text_average_age">平均年龄:&#160;&#160;</string>
     <string name="radio_yes">是</string>
     <string name="radio_no">否</string>
     <string name="text_doctor">医生</string>
