--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,9 +13,6 @@
     <string name="multipleChoice">Multiple Choice</string>
     <string name="Numeric">Numeric</string>
     <string name="TrueFlase">True or False</string>
-    <string name="noHint">Sorry, I cannot give you any hint!</string>
-    <string name="like">Like</string>
-    <string name="dislike">Dislike</string>
     <string name="save">Save Question</string>
     <string name="typeHere">Type your question here</string>
     <string name="typeAnswerHere">Type your answer here</string>
@@ -24,6 +21,9 @@
     <string name="continueImport">Do you wish to import quiz from the Internet?</string>
     <string name="yes">Yes</string>
     <string name="cancel">Cancel</string>
+    <string name="delete">Delete</string>
+    <string name="modify">Modify</string>
+    <string name="saveChange">Save Change</string>
 
     <string name="oc_main">OCTranspo</string>
     <string name="oc_addStop">Add Stop</string>
@@ -105,9 +105,5 @@
     <string name="letterb">B</string>
     <string name="letterc">C</string>
     <string name="letterd">D</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-
-
 </resources>
